--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,13 @@
 name: call_and_response
-description: A server app using the shelf package and Docker.
+description: Spin up a fake HTTP Server with Dart
 version: 1.0.0
-# homepage: https://www.example.com
+repository: https://github.com/MelbourneDeveloper/call_and_response
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: '>=2.19.0 <3.0.0'
 
 dependencies:
   args: ^2.0.0
-  json_annotation: ^4.8.0
-  json_serializable: ^6.6.0
   shelf: ^1.1.0
   shelf_router: ^1.0.0
 
